create github pages

--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="header6 cid-rtfn8umAcK mbr-fullscreen mbr-parallax-background" id="header6-15">
+<section class="engine"><a href="https://mobirise.info/f">simple site builder</a></section><section class="header6 cid-rtfn8umAcK mbr-fullscreen mbr-parallax-background" id="header6-15">
 
     
 
@@ -100,8 +100,7 @@
     <div class="container">
         <div class="media-container-row">
             <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-7">
-                <blockquote><p><strong>Еще до старта вебинара вы получите промокод для немедленного бесплатного доступа на новейшую платформу органического продвижения.
-</strong></p></blockquote>
+                <blockquote><p><strong>Еще до старта вебинара вы получите промокод для немедленного бесплатного доступа на новейшую платформу органического продвижения, где алгоритм построен так, что подписавшись всего на 15 человек, вы можете получить до 22 млн подписчиков.</strong></p></blockquote>
             </div>
         </div>
     </div>
@@ -159,7 +158,7 @@
           </div>
           <div class="testimonials-caption col-lg-9 col-md-8">
             <div class="user_text ">
-              <p class="mbr-fonts-style  display-7">Самая большая потребность человеческой природы - это потребность чувствовать свою значимость и быть оцененым по достоинству! - эта цитата Алана Пиза, в частности, объясняет тот ошеломительный бум, который происходит в Instagram сегодня. Глупо было бы наблюдать за этим со стороны, если мы можем быть участниками процесса. Предприниматель всегда ищет проблему и предлагает ее решение.</p>
+              <p class="mbr-fonts-style  display-7">Самая большая потребность человеческой природы - это потребность чувствовать свою значимость и быть оцененым по достоинству! - эта цитата Алана Пиза частично илюстрирует тот ошеломительный бум, который происходит в Instagram сегодня. Глупо было бы наблюдать за этим со стороны, если мы можем быть участниками процесса. Предприниматель всегда ищет проблему и предлагает ее решение.</p>
             </div>
             <div class="user_name mbr-bold mbr-fonts-style align-left pt-3 display-7">
                  Сергей Шевченко</div>
@@ -196,8 +195,8 @@
     
     <div class="container">
         <h2 class="mbr-section-title pb-3 mbr-fonts-style align-center display-5"><strong>
-            В чем есть проблема сегодня?</strong></h2>
-        <h3 class="mbr-section-subtitle pb-5 mbr-fonts-style align-center display-5"><strong>В чем ваша возможность!</strong></h3>
+            В чем проблема продвижения в Instagram сегодня?</strong></h2>
+        <h3 class="mbr-section-subtitle pb-5 mbr-fonts-style align-center display-5"><strong>В чем наша возможность!</strong></h3>
         <div class="step-container">
             <div class="card separline pb-4">
                 <div class="step-element d-flex">
@@ -293,7 +292,7 @@
                         <div class="row">
                             <div class="col-md-12">
                                 <p class="mbr-text py-5 mbr-fonts-style display-7">
-                                    Помощь и Поддержка особенно важны. Популярность вашего аккаунта ежедневно набирает обороты благодаря сообществу. Обучение и оперативная информация обо всех изменениях алгоритмов Instagram. Преодоление технических трудностей в продвижении.<br>Помощь поиске партнеров для взаимного пиара.</p>
+                                    Помощь и Поддержка особенно важны. Популярность вашего аккаунта ежедневно набирает обороты благодаря сообществу. Обучение тонкостям Instagram и оперативная информация обо всех изменениях алгоритмов Instagram от ТОПовых технических специалистов. Преодоление технических трудностей в продвижении.<br>Поиск партнеров для взаимного пиара и гарантирование выпонения взаимных обязательств сторонами.</p>
                             </div>
                         </div>
                     </div>
