--- a/page1.html
+++ b/page1.html
@@ -36,15 +36,15 @@
     </figure>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/o">portfolio web templates</a></section><section class="mbr-instagram-feed" data-rows="2" data-per-row-slider="" data-spacing="5" data-full-width="" data-token="4357027058.727bfe1.e220d673773f48a8a37b0ed21c7a2c59" data-per-row-grid="4" id="instagram-feed-block-1m" data-rv-view="58" style="background-image: url(assets/images/instagram-background.jpg); padding-top: 40px; padding-bottom: 40px;">
+<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="mbr-instagram-feed" data-rows="2" data-per-row-slider="" data-spacing="5" data-full-width="" data-token="4357027058.727bfe1.e220d673773f48a8a37b0ed21c7a2c59" data-per-row-grid="4" id="instagram-feed-block-1m" data-rv-view="30" style="background-image: url(assets/images/instagram-background.jpg); padding-top: 40px; padding-bottom: 40px;">
     
     <div class="container container_toggle">
         <div class="row">
             <div class="col">
                 <div class="inst">
-                    <h1 class="inst__title align-center mbr-fonts-style display-5">Привет!<br>Ссылка на вебинар заряжена у меня в Instagram в автоприветсвии.<br> Она автоматически приходит через несколько минут после подписки.<br>&nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;https://www.instagram.com/nikolaykalinichenko/<br><br></h1>
+                    <h1 class="inst__title align-center mbr-fonts-style display-5">Привет!<br>Меня зовут Николай Калиниченко.<br>Я муж, отец, спортсмен, предприниматель, смм-щик...<br>Ссылка на вебинар заряжена у меня в автоприветствии, в Instagram &nbsp;@nikolaykalinichenko&nbsp;<br> Она автоматически придет в твой direct через несколько минут после подписки.<br>Если вдруг не пришла, запроси, я отправлю.<br>Жми на любую фотку, авторизуйся в Instagram подпишись на мой профиль.<br>Жду тебя на вебинаре, будет жарко) &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp; &nbsp;&nbsp;<br><br></h1>
                     <div class="inst__content"></div>
-                    <div class="inst__more mbr-section-btn align-center" buttons="0"><a class="btn btn-md display-4 btn-success" href="#" data-max-id="1947998171510804798_4357027058">Show more</a></div>
+                    <div class="inst__more mbr-section-btn align-center" buttons="0"><a class="btn btn-md display-4 btn-success" href="#" data-max-id="1947998171510804798_4357027058">Открыть еще..<br></a></div>
                 </div>
             </div>
         </div>
