--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/x">css templates</a></section><section class="header6 cid-rtfn8umAcK mbr-fullscreen mbr-parallax-background" id="header6-15">
+<section class="engine"><a href="https://mobirise.info/o">free portfolio website templates</a></section><section class="header6 cid-rtfn8umAcK mbr-fullscreen mbr-parallax-background" id="header6-15">
 
     
 
@@ -100,7 +100,7 @@
     <div class="container">
         <div class="media-container-row">
             <div class="mbr-text col-12 col-md-8 mbr-fonts-style display-7">
-                <blockquote><p><strong>Еще до старта вебинара вы получите промокод для немедленного бесплатного доступа на новейшую платформу органического продвижения, где алгоритм построен так, что подписавшись всего на 15 человек, вы можете получить до 22 млн подписчиков.</strong></p></blockquote>
+                <blockquote><p><strong>Еще до старта вебинара вы получите промокод для немедленного бесплатного доступа на новейшую платформу органического продвижения, где алгоритм построен так, что подписавшись всего на 15 человек, вы рискуете получить до 22 млн подписчиков (есть один маленький ньанс, о котором узнаете на вебинаре)</strong></p></blockquote>
             </div>
         </div>
     </div>
