--- a/page1.html
+++ b/page1.html
@@ -35,7 +35,7 @@
             <div class="media-container">
                 <div class="col-md-12 align-center">
                     
-                    <p class="mbr-text pb-3 mbr-white mbr-fonts-style display-5"><strong>Выберите Ваш Мессенджер и введите "Start"</strong></p>
+                    <p class="mbr-text pb-3 mbr-white mbr-fonts-style display-2"><strong>Выберите Ваш Мессенджер</strong></p>
                     <div class="mbr-section-btn align-center py-2"><a class="btn btn-md btn-success display-4" href="https://wa.me/380661259741" target="_blank"><span class="socicon socicon-whatsapp mbr-iconfont mbr-iconfont-btn" style="color: rgb(255, 255, 255);"></span>WhatsApp&nbsp;</a> <a class="btn btn-md btn-secondary display-4" href="https://telegram.me/NikolayKalinichenko" target="_blank"><span class="socicon socicon-telegram mbr-iconfont mbr-iconfont-btn" style="color: rgb(255, 255, 255);"></span>Telegram&nbsp;</a> <a class="btn btn-md btn-primary display-4" href="http://viber.com/nikolaylclub" target="_blank"><span class="socicon socicon-vimeo mbr-iconfont mbr-iconfont-btn"></span>Viber &nbsp; &nbsp; &nbsp; &nbsp;</a> <a class="btn btn-md btn-danger display-4" href="https://m.me/nikolaykalinichenko.live?ref=w6163344" target="_blank"><span class="socicon socicon-facebook mbr-iconfont mbr-iconfont-btn" style="color: rgb(255, 255, 255);"></span>Messenger</a></div>
 
                     <div class="icons-media-container mbr-white">
@@ -67,7 +67,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.info/o">portfolio web templates</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.info/r">free bootstrap template</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
