create github pages

--- a/index.html
+++ b/index.html
@@ -10,14 +10,15 @@
   <meta name="description" content="">
   
   <title>Как заработать в инстаграме</title>
+  <link rel="stylesheet" href="assets/web/assets/mobirise-icons2/mobirise2.css">
   <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
   <link rel="stylesheet" href="assets/soundcloud-plugin/style.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
-  <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
+  <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
@@ -55,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">amp template</a></section><section class="header6 cid-rtfn8umAcK mbr-fullscreen mbr-parallax-background" id="header6-15">
+<section class="engine"><a href="https://mobirise.info/f">easy web builder</a></section><section class="header6 cid-rtfn8umAcK mbr-fullscreen mbr-parallax-background" id="header6-15">
 
     
 
@@ -67,7 +68,7 @@
             <div class="mbr-white col-md-10">
                 <h1 class="mbr-section-title align-center mbr-bold pb-3 mbr-fonts-style display-1"><br><br>15 ИЮНЯ / 15:00 / Киев/МСК</h1>
                 <p class="mbr-text align-center pb-3 mbr-fonts-style display-2"><strong>КАК ЗАРАБОТАТЬ В ИНСТАГРАМЕ</strong><br><strong><br>КАК С НУЛЯ ВЫЙТИ НА ПРИБЫЛЬ от 390$ и до 2000$<br><br></strong><br></p>
-                <div class="mbr-section-btn align-center"><a class="btn btn-md btn-secondary display-4" href="page1.html#header12-1c" target="_blank">ПРИНЯТЬ УЧАСТИЕ</a></div>
+                <div class="mbr-section-btn align-center"><a class="btn btn-md btn-warning display-5" href="page1.html#header12-1c" target="_blank"><span class="mobi-mbri mobi-mbri-touch mbr-iconfont mbr-iconfont-btn" style="color: rgb(255, 255, 255);"></span>ПРИНЯТЬ УЧАСТИЕ</a></div>
             </div>
         </div>
     </div>
@@ -414,15 +415,15 @@
 
 
   <script src="assets/web/assets/jquery/jquery.min.js"></script>
-  <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
+  <script src="assets/popper/popper.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-  <script src="assets/parallax/jarallax.min.js"></script>
   <script src="assets/smoothscroll/smooth-scroll.js"></script>
-  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
+  <script src="assets/dropdown/js/script.min.js"></script>
+  <script src="assets/parallax/jarallax.min.js"></script>
   <script src="assets/mbr-tabs/mbr-tabs.js"></script>
   <script src="assets/sociallikes/social-likes.js"></script>
-  <script src="assets/dropdown/js/script.min.js"></script>
+  <script src="assets/touchswipe/jquery.touch-swipe.min.js"></script>
   <script src="assets/theme/js/script.js"></script>
   
   
