create github pages

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">website builder</a></section><section class="header6 cid-rtfn8umAcK mbr-fullscreen mbr-parallax-background" id="header6-15">
+<section class="engine"><a href="https://mobirise.info/z">best free css templates</a></section><section class="header6 cid-rtfn8umAcK mbr-fullscreen mbr-parallax-background" id="header6-15">
 
     
 
@@ -66,8 +66,8 @@
     <div class="container">
         <div class="row justify-content-md-center">
             <div class="mbr-white col-md-10">
-                <h1 class="mbr-section-title align-center mbr-bold pb-3 mbr-fonts-style display-1"><br><br>15 ИЮНЯ / 15:00 / Киев/МСК</h1>
-                <p class="mbr-text align-center pb-3 mbr-fonts-style display-2"><strong>КАК ЗАРАБОТАТЬ В ИНСТАГРАМЕ</strong><br><strong><br>КАК С НУЛЯ ВЫЙТИ НА ПРИБЫЛЬ от 390$ и до 2000$<br><br></strong><br></p>
+                <h1 class="mbr-section-title align-center mbr-bold pb-3 mbr-fonts-style display-1"><br>КАК ЗАРАБОТАТЬ В Instagram 2019</h1>
+                <p class="mbr-text align-center pb-3 mbr-fonts-style display-2"><strong>онлайн-вебинар<br>КАК С НУЛЯ ВЫЙТИ НА ПРИБЫЛЬ от 390$ и до 2000$<br><br></strong><br></p>
                 <div class="mbr-section-btn align-center"><a class="btn btn-md btn-warning display-5" href="page1.html#header12-1c" target="_blank"><span class="mobi-mbri mobi-mbri-touch mbr-iconfont mbr-iconfont-btn" style="color: rgb(255, 255, 255);"></span>ПРИНЯТЬ УЧАСТИЕ</a></div>
             </div>
         </div>
