--- a/page1.html
+++ b/page1.html
@@ -56,7 +56,7 @@
 
                         <div class="card col-12 col-md-6 col-lg-3">
                             
-                            <h5 class="mbr-fonts-style display-5">Перед началом вебинара мы пришлем приглашение.</h5>
+                            <h5 class="mbr-fonts-style display-5">В течении ближайших двух дней мы сообщим Вам дату и время вебинара.</h5>
                         </div>
                     </div>
                 </div>
@@ -67,7 +67,7 @@
 </section>
 
 
-  <section class="engine"><a href="https://mobirise.info/g">how to build a website</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
+  <section class="engine"><a href="https://mobirise.info/g">how to build a site for free</a></section><script src="assets/web/assets/jquery/jquery.min.js"></script>
   <script src="assets/popper/popper.min.js"></script>
   <script src="assets/tether/tether.min.js"></script>
   <script src="assets/bootstrap/js/bootstrap.min.js"></script>
