create github pages

--- a/vhod.html
+++ b/vhod.html
@@ -54,7 +54,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/w">html5 templates</a></section><section class="mbr-section form1 cid-rtDwWTlCLV" id="form1-1p">
+<section class="engine"><a href="https://mobirise.info/c">free web builder</a></section><section class="mbr-section form1 cid-rtDwWTlCLV" id="form1-1p">
 
     
 
@@ -72,7 +72,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ZX+evROJYlcwoXL6pRpaaS0wNlZzX4NFMzpCh5kOE0zxDi3fjNXTFyhv1HPGSKld1SWLBEjQ3cbHHD4Ov/TYB+AilSzeTuxOtshIFAE1qI/s4BGjdIuANKXffMsVnbbQ">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="7pip60A4yIf6TvNbrsqH4c1RmeT9/xwYN2Hj+QriytWa45+xT4pJ/K+O4bl/Mwg8jFt/SQZn1v8vgCpvtPavt010H+L1svJrhHBWmnkK08ZjuUKEF0KZlDX8CI10aRex">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Добро пожаловать!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
