--- a/vhod.html
+++ b/vhod.html
@@ -10,13 +10,14 @@
   <meta name="description" content="Site Builder Description">
   
   <title>vhod</title>
+  <link rel="stylesheet" href="assets/web/assets/mobirise-icons/mobirise-icons.css">
   <link rel="stylesheet" href="assets/tether/tether.min.css">
+  <link rel="stylesheet" href="assets/soundcloud-plugin/style.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-grid.min.css">
   <link rel="stylesheet" href="assets/bootstrap/css/bootstrap-reboot.min.css">
-  <link rel="stylesheet" href="assets/soundcloud-plugin/style.css">
-  <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/dropdown/css/style.css">
+  <link rel="stylesheet" href="assets/socicon/css/styles.css">
   <link rel="stylesheet" href="assets/theme/css/style.css">
   <link rel="stylesheet" href="assets/mobirise/css/mbr-additional.css" type="text/css">
   
@@ -54,7 +55,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">free web builder</a></section><section class="mbr-section form1 cid-rtDwWTlCLV" id="form1-1p">
+<section class="engine"><a href="https://mobirise.info/k">develop own website</a></section><section class="mbr-section form1 cid-rtDwWTlCLV" id="form1-1p">
 
     
 
@@ -72,7 +73,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="7pip60A4yIf6TvNbrsqH4c1RmeT9/xwYN2Hj+QriytWa45+xT4pJ/K+O4bl/Mwg8jFt/SQZn1v8vgCpvtPavt010H+L1svJrhHBWmnkK08ZjuUKEF0KZlDX8CI10aRex">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="5pVyNASInPFY5ab0AWoqJ5BiUkTNNEg1uPJh89Vfr47VlDyda8P7D1a0wK2SuayIy35yHJRzBt5txIbCVDer5s71+RGwx72OhwZEy+SmZwY7QNYDJZBXC6tqRykSAR7E">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Добро пожаловать!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -89,7 +90,7 @@
                             <input type="tel" name="phone" data-form-field="Phone" class="form-control display-7" id="phone-form1-1p">
                         </div>
                         
-                        <div class="col-md-12 input-group-btn align-center"><button type="submit" class="btn btn-primary btn-form display-4" href="https://zoom.us/j/2979303894">ВОЙТИ</button></div>
+                        <div class="col-md-12 input-group-btn align-center"><button type="submit" class="btn btn-primary btn-form display-4" href="https://zoom.us/j/2979303894" target="_blank"><span class="mbri-touch mbr-iconfont mbr-iconfont-btn"></span>ВОЙТИ</button></div>
                     </div>
                 </form><!---Formbuilder Form--->
             </div>
