create github pages

--- a/mashurov.html
+++ b/mashurov.html
@@ -110,7 +110,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free web templates</a></section><section class="header4 cid-rtDtMqb0pn mbr-parallax-background" id="header4-1n">
+<section class="engine"><a href="https://mobirise.info/n">simple site templates</a></section><section class="header4 cid-rtDtMqb0pn mbr-parallax-background" id="header4-1n">
 
     
 
